# mcp-weather

./: Dockerfile  README.md  config.json  pyproject.toml  server.py
