[project]
name = "weather"
version = "0.1.0"
description = "Weather MCP Server with streamable-http transport"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.scripts]
weather-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
